Fix the bug when on drag below tasks were jumping up.

--- a/src/Tasks/Task.css
+++ b/src/Tasks/Task.css
@@ -1,7 +1,10 @@
+.task-container {
+    padding: 3px 0
+}
+
 .task {
     background-color: #f8f9fa;
     border-radius: .25rem;
-    margin-bottom: 5px;
     padding: .4rem .2rem;
 }
 
